--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Home">
   <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
+    <!-- <h2>Welcome to Ionic</h2>
     <p>
     This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
     </p>
@@ -11,7 +11,7 @@
     If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
     </p>
     <p>
-      <b>Psst!</b> - Try <a href="http://view.ionic.io/">Ionic View</a> to easily share and test your app with clients and co-workers.
+      <b>Psst!</b> - Try <a href="http://view.ionic.io/">Ionic View</a> to easily share and test your app with clients and co-workers. -->
     </p>
   </ion-content>
 </ion-view>
